// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Construct "LambdaNodejs" by default Snapshot 1`] = `
Object {
  "Parameters": Object {
    "AssetParameters0af9a6ba8f6a9ce0466bbbd79dcf9e7e724f633641d4f0f85638ce2fe133bf5bArtifactHashA4D03858": Object {
      "Description": "Artifact hash for asset \\"0af9a6ba8f6a9ce0466bbbd79dcf9e7e724f633641d4f0f85638ce2fe133bf5b\\"",
      "Type": "String",
    },
    "AssetParameters0af9a6ba8f6a9ce0466bbbd79dcf9e7e724f633641d4f0f85638ce2fe133bf5bS3Bucket899A70EB": Object {
      "Description": "S3 bucket for asset \\"0af9a6ba8f6a9ce0466bbbd79dcf9e7e724f633641d4f0f85638ce2fe133bf5b\\"",
      "Type": "String",
    },
    "AssetParameters0af9a6ba8f6a9ce0466bbbd79dcf9e7e724f633641d4f0f85638ce2fe133bf5bS3VersionKey810D76C3": Object {
      "Description": "S3 key for asset version \\"0af9a6ba8f6a9ce0466bbbd79dcf9e7e724f633641d4f0f85638ce2fe133bf5b\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "MyTestConstructFunction4795DE86": Object {
      "DependsOn": Array [
        "MyTestConstructFunctionServiceRole786CED66",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters0af9a6ba8f6a9ce0466bbbd79dcf9e7e724f633641d4f0f85638ce2fe133bf5bS3Bucket899A70EB",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters0af9a6ba8f6a9ce0466bbbd79dcf9e7e724f633641d4f0f85638ce2fe133bf5bS3VersionKey810D76C3",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters0af9a6ba8f6a9ce0466bbbd79dcf9e7e724f633641d4f0f85638ce2fe133bf5bS3VersionKey810D76C3",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "MyTestConstructFunctionServiceRole786CED66",
            "Arn",
          ],
        },
        "Runtime": "nodejs12.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "MyTestConstructFunctionServiceRole786CED66": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;

exports[`Test Construct "LambdaNodejs" by option {"func":{"entry":"./lambda/test/index.ts","handler":"handler"},"role":{"description":"for MyAwsCdkLibLambdaNodejsTest2Stack","managedPolicies":["service-role/AWSLambdaBasicExecutionRole","AmazonS3ReadOnlyAccess"]},"version":{"removalPolicy":"retain"}} Snapshot 1`] = `
Object {
  "Parameters": Object {
    "AssetParametersd956e8a02d08d2f129f82ea8bc097f703fc9b1be9f786674c36a9d92d37bfaa2ArtifactHashC6CD1562": Object {
      "Description": "Artifact hash for asset \\"d956e8a02d08d2f129f82ea8bc097f703fc9b1be9f786674c36a9d92d37bfaa2\\"",
      "Type": "String",
    },
    "AssetParametersd956e8a02d08d2f129f82ea8bc097f703fc9b1be9f786674c36a9d92d37bfaa2S3Bucket14805F3B": Object {
      "Description": "S3 bucket for asset \\"d956e8a02d08d2f129f82ea8bc097f703fc9b1be9f786674c36a9d92d37bfaa2\\"",
      "Type": "String",
    },
    "AssetParametersd956e8a02d08d2f129f82ea8bc097f703fc9b1be9f786674c36a9d92d37bfaa2S3VersionKeyC4787A84": Object {
      "Description": "S3 key for asset version \\"d956e8a02d08d2f129f82ea8bc097f703fc9b1be9f786674c36a9d92d37bfaa2\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "MyTestConstructFunction4795DE86": Object {
      "DependsOn": Array [
        "MyTestConstructRole16E7E65D",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersd956e8a02d08d2f129f82ea8bc097f703fc9b1be9f786674c36a9d92d37bfaa2S3Bucket14805F3B",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersd956e8a02d08d2f129f82ea8bc097f703fc9b1be9f786674c36a9d92d37bfaa2S3VersionKeyC4787A84",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersd956e8a02d08d2f129f82ea8bc097f703fc9b1be9f786674c36a9d92d37bfaa2S3VersionKeyC4787A84",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "MyTestConstructRole16E7E65D",
            "Arn",
          ],
        },
        "Runtime": "nodejs12.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "MyTestConstructRole16E7E65D": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "for MyAwsCdkLibLambdaNodejsTest2Stack",
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/AmazonS3ReadOnlyAccess",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "MyTestConstructVersion4b4f2133c15e419ba344b8c5d9f61d919b29c38b7ba7bcd61e4bc01163d0f53dD881883A": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "FunctionName": Object {
          "Ref": "MyTestConstructFunction4795DE86",
        },
      },
      "Type": "AWS::Lambda::Version",
      "UpdateReplacePolicy": "Retain",
    },
  },
}
`;
